Fix compilation. Add new textures